# chat_analyzer_ui

./: .gitignore  .last_build_id  README.es.md  README.md  appimage.sh  flutter_bootstrap.js  flutter_service_worker.js  generate_deb_app.sh  generate_linux_icons.ps1  index.html  installer.nsi  io.xeland314.chat_analyzer_ui.desktop  main.dart.js  main.dart.mjs  main.dart.wasm  manifest.json  pubspec.yaml  version.json
android/app/: build.gradle.kts
assets/: AssetManifest.bin.json  AssetManifest.json  LICENSE  NOTICES  sample_chat.txt  sebas.txt
assets/assets/: sample_test_chat.txt
docs/: AI_USAGE_AND_PROMPTS.md
extern_libs/rust/: Cargo.toml  README.md
extern_libs/rust/src/: lib.rs  sentiment.rs
flatpak/: io.xeland314.chat_analyzer_ui.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
lib/ui/: chat.dart  home.dart  results.dart
linux/: CMakeLists.txt  launcher.sh
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
snap/: snapcraft.yaml
test/: widget_test.dart
test/chat/: chat_date_selector_test.dart  chat_helpers_test.dart  chat_message_list_test.dart  chat_message_widget.dart  group_messages_by_date_test.dart  sentiment_color_test.dart
test/common/: time_to_text_test.dart
test/performance/: benchmark_scientific.dart  parser_performance_test.dart  (+2 more)
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+89 files in other folders)
