[package]
name = "chat_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
lazy_static = "1.5.0"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
